--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,11 @@
 name: Run Python Script
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-
+ 
 jobs:
   run-python:
     runs-on: ubuntu-latest
