--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,16 @@
-name: Run Python Script
+name: My Workflow
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
- 
+on: [push] # Event that triggers the workflow
+
 jobs:
-  run-python:
-    runs-on: ubuntu-latest
+  build: # A job named 'build'
+    runs-on: ubuntu-latest # Runner environment
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Step 2: Set up Python environment
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      # Step 3: Install dependencies (if any)
-      - name: Install dependencies
+      - uses: actions/checkout@v4 # Action to checkout the repository code
+      - name: Run a one-line script
+        run: echo Hello, world!
+      - name: Run a multi-line script
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # Step 4: Run the Python script
-      - name: Run Python script
-        run: python script.py
+          echo Add other actions to build,
+          echo test, and deploy your project.
